@@ -1,6 +1,6 @@
 displayName = Arbour
 author = GabeHasWon, Heltonyan
-version = 1.2.0.1
+version = 1.2.1
 hideCode = false
 hideResources = false
 includeSource = true
